<?xml version="1.0" encoding="utf-8"?>
<!--
    Name: Solomon Ewusi
    Student ID: N01659373
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeftKa"
    android:background="@color/light_gray">

    <!-- Title: "Your Full Name" -->
    <TextView
        android:id="@+id/kaiTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_full_name"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Divider Line -->
    <View
        android:id="@+id/kaiDivider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/kaiTextViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- "Select Your Color" Label -->
    <TextView
        android:id="@+id/kaiTextViewSelectColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_color"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/kaiDivider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <!-- RadioGroup for Colors -->
    <RadioGroup
        android:id="@+id/kaiRadioGroupColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/kaiTextViewSelectColor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp">

        <RadioButton
            android:id="@+id/kaiRadioGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_green"
            android:textColor="@color/green"
            android:checked="true"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/kaiRadioYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_yellow"
            android:textColor="@color/yellow"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/kaiRadioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_red"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/kaiRadioOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_other"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RadioGroup>

    <!-- Submit Button -->
    <Button
        android:id="@+id/kaiButtonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textColor="@color/white"
        android:background="@color/dark_blue"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/kaiRadioGroupColors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
