<?xml version="1.0" encoding="utf-8"?>
<!--
    Name: Kaivalya Anugula
    Student ID: N01659330
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RightAn"
    android:background="@color/light_gray">

    <!-- TextView to Display the Selected Color -->
    <TextView
        android:id="@+id/kaiSelectedColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <!-- Hockey Checkbox -->
    <CheckBox
        android:id="@+id/kaiCheckHockey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_hockey"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/kaiSelectedColorText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>

    <!-- Basketball Checkbox -->
    <CheckBox
        android:id="@+id/kaiCheckBasketball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_basketball"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/kaiCheckHockey"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"/>

    <!-- Baseball Checkbox -->
    <CheckBox
        android:id="@+id/kaiCheckBaseball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_baseball"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/kaiCheckBasketball"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"/>

    <!-- SPORT Button -->
    <Button
        android:id="@+id/kaiButtonSport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sport_button"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/dark_green"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/kaiCheckBaseball"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
